Tue Jun  6 13:48:59 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers_Common_Export.h
        
          Missing file from previous commit.

Mon Jun  5 20:34:51 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/RepositoryManager/RepositoryManager.mpc
        * DAnCE/TargetManager/TM_Client.mpc
        * RACE/Controller/Component/Controller.mpc
        * docs/tutorials/Quoter/Simple/Distributor/Distributor.mpc
        * docs/tutorials/Quoter/Simple/Stock_Base/Stock_Base.mpc
        * examples/BasicSP/BasicSP.mpc
        * examples/BasicSP/BMClosedED/BMClosedED.mpc
        * examples/BasicSP/BMDevice/BMDevice.mpc
        * examples/BasicSP/BMDisplay/BMDisplay.mpc
        * examples/BasicSP/EC/EC.mpc
        * examples/Display/Display_Base/Display_Base.mpc
        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc
        * examples/Hello/Hello_Base/Hello_Base.mpc
        * examples/Hello/Receiver/Receiver.mpc
        * examples/Hello/Sender/Sender.mpc
        * examples/Swapping/Hello_Base/Hello_Base.mpc
        * examples/Swapping/Receiver/Receiver.mpc
        * examples/Swapping/Sender/Sender.mpc
        * performance-tests/Protocols/common/Protocols.mpc
        * tests/Bug_2130_Regression/interfaces/ENW.mpc
        * tests/CIDL/CodeGen/CodeGen.mpc
        * tests/IDL3/Components/ComplexComponent/Attributes/Attributes.mpc
        * tests/IDL3/Components/ComplexComponent/EventSink/EventSink.mpc
        * tests/IDL3/Components/ComplexComponent/EventSource/EventSource.mpc
        * tests/IDL3/Components/ComplexComponent/Facets/Facets.mpc
        * tests/IDL3/Components/ComplexComponent/Receptacles/Receptacles.mpc
        * tests/IDL3/Components/SimpleComponent/SimpleComponent.mpc
        * tests/IDL3/Events/Abstract/Abstract.mpc
        * tests/IDL3/Events/Regular/Regular.mpc
        * tests/IDL3/Homes/Attributes/HomeAttributes.mpc
        * tests/IDL3/Homes/Basic/Basic.mpc